apps/base/kavm-services/ref-ng-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ref-ng-ui
  namespace: kavm-services
  labels:
    name: ref-ng-ui
spec:
  ports:
  - port: 8359
    targetPort: 80
  selector:
    app: ref-ng-ui
